--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,11 @@ nav .brand-logo, .brand-logo img {
   height: 100%;
 }
 
+nav a:hover {
+  border-bottom: 1px solid #56d6c2;
+  transition: all ease 0.8s;
+}
+
 .brand-logo img {
   padding: 20px;
 }
@@ -40,6 +45,7 @@ nav .brand-logo, .brand-logo img {
 .center.lhd-logo {
   width: 45%;
   margin: auto;
+  padding-top: 100px;
 }
 
 .lhd-logo img {
@@ -49,4 +55,20 @@ nav .brand-logo, .brand-logo img {
 .lhd-details {
   color: #fff;
   font-weight: 300;
+  margin: 60px 0;
+}
+
+.lhd-button {
+  border: 1px solid #56d6c2;
+  border-radius: 2px;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: 20px;
+  padding: 20px 50px;
+  transition: all ease 0.8s;
+}
+
+.lhd-button:hover {
+  background: #56d6c2;
 }
