--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ body {
 
 nav {
   background: transparent !important;
+  box-shadow: none;
 }
 
 nav .brand-logo, .brand-logo img {
@@ -67,10 +68,118 @@ nav a:hover {
   text-transform: uppercase;
   letter-spacing: 1px;
   font-size: 20px;
-  padding: 20px 50px;
+  padding: 15px 50px;
   transition: all ease 0.8s;
 }
 
 .lhd-button:hover {
   background: #56d6c2;
+}
+
+
+
+/** About Section **/
+
+.div-spacer {
+  height: 1px;
+}
+
+.line-twerk {
+  height: 2px;
+  background: rgb(86, 214, 194);
+  width: 87px;
+  margin: auto;
+}
+
+.about-details p {
+    color: #4a4d4d;
+    font-size: 23px;
+    line-height: 2em;
+    font-weight: 300;
+    padding-bottom: 50px;
+}
+
+.intro h4 {
+    color: #adb1b1;
+    font-size: 22px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: 600;
+    padding-top: 45px;
+}
+
+.intro h3 {
+    color: #2c2d2d;
+    font-weight: 300;
+    font-size: 48px;
+    padding-bottom: 31px;
+    letter-spacing: 2px;
+}
+
+/* Testimonials */
+
+.testie-body {
+  background: #05232d;
+}
+
+.bottom-overlay {
+    background: linear-gradient(to bottom,rgba(5,35,45,0) 64%,rgba(39,76,89,0.1) 74%,rgba(248,255,255,1) 148%);
+    position: relative;
+    height: 100%;
+    min-height: 100%;
+    padding: 60px 0;
+}
+
+.testie-body .intro h4 {
+    color: #eaf5f5;
+    font-size: 22px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: 600;
+    padding-top: 60px;
+}
+
+.testie-body .intro h3 {
+    color: #f6ffff;
+    font-weight: 300;
+    font-size: 48px;
+    padding-bottom: 31px;
+    letter-spacing: 2px;
+}
+
+.hacker-test {
+    margin: 64px 0 90px 0;
+}
+
+.hacker-logo {
+    padding: 40px 0;
+}
+
+.statement p {
+    color: #f6ffff;
+    font-size: 16px;
+    font-weight: 300;
+    font-style: italic;
+    line-height: 36px;
+    padding-top: 25px;
+}
+
+.hacker-org {
+    padding: 20px 0;
+}
+
+.hacker-org h5 {
+    color: #f8ffff;
+    font-size: 16px;
+    margin: 4px 0;
+}
+
+.hacker-org h6 {
+    color: #56d6c2;
+    font-size: 14px;
+    margin: 4px 0px;
+}
+
+.hacker-test .line-twerk {
+  width: 60px;
 }
