--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
   padding: 0 15px;
 }
 
+
 html, body {
   height: 100%;
   width: 100%;
@@ -227,6 +228,74 @@ nav a:hover {
     min-height: 100%;
 }
 
+/* Join Us */
+
+#join {
+    position: relative;
+    padding-bottom: 8em;
+}
+
+.join .about-details p {
+  padding-bottom: 20px;
+}
+.join-button {
+  background: #56d6c2;
+  border-radius: 2px;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: 20px;
+  padding: 15px 50px;
+  transition: all ease 0.8s;
+}
+
+.join-button:hover {
+  opacity: 0.7;
+}
+
+/*Footer*/
+footer.page-footer {
+  padding: 20px;
+  margin: 0;
+  background: #061a21;
+}
+
+footer.page-footer .footer-copyright {
+  background: transparent;
+}
+
+.mlh-logo a {
+    display: block;
+}
+
+.mlh-logo img {
+    width: 60px;
+}
+
+.socmed-bar li {
+    display: inline-block;
+}
+
+.socmed-bar {
+    text-align: right;
+}
+
+.socmed-bar ul {
+    margin: 0;
+}
+
+.socmed-bar a {
+    padding: 15px;
+}
+
+.socmed-bar .fa {
+    color: #fff;
+    font-size: 18px;
+    width: 18px;
+    height: 18px;
+}
+  
+
 /* Media Queries */
 @media (max-width: 600px) {
   .picture-box {
@@ -234,8 +303,8 @@ nav a:hover {
   }
 }
 
-/*@media (min-width: 601px) and (max-width: 992px) {
+@media (min-width: 601px) and (max-width: 992px) {
   .picture-box {
     width: 50%;
   }
-}*/
+}
