--- a/css/style.css
+++ b/css/style.css
@@ -301,10 +301,18 @@ footer.page-footer .footer-copyright {
   .picture-box {
     width: 100%;
   }
+
+  .center.lhd-logo {
+    width: 90%;
+  }
 }
 
 @media (min-width: 601px) and (max-width: 992px) {
   .picture-box {
     width: 50%;
+  }
+
+  .center.lhd-logo {
+    width: 90%;
   }
 }
