--- a/css/style.css
+++ b/css/style.css
@@ -117,13 +117,22 @@ nav a:hover {
     letter-spacing: 2px;
 }
 
+/*.about-body .bottom-overlay {
+    background: linear-gradient(to bottom,rgba(248,255,255,0) 64%,rgba(39,76,89,0.1) 74%,rgba(5,35,45,1) 100%);
+    position: relative;
+    height: 100%;
+    min-height: 100%;
+    padding: 60px 0;
+}
+*/
+
 /* Testimonials */
 
 .testie-body {
   background: #05232d;
 }
 
-.bottom-overlay {
+.testie-body .bottom-overlay {
     background: linear-gradient(to bottom,rgba(5,35,45,0) 64%,rgba(39,76,89,0.1) 74%,rgba(248,255,255,1) 148%);
     position: relative;
     height: 100%;
@@ -154,7 +163,20 @@ nav a:hover {
 
 .hacker-logo {
     padding: 40px 0;
+    height: 180px;
 }
+
+.hacker-logo.hacktx {
+  background: url(../img/hacktx.png) no-repeat center center;
+  background-size: 205px;
+}
+
+.hacker-logo.vandyhacks {
+  background: url(../img/vandyhacks.png) no-repeat center center;
+  background-size: 100px;
+}
+
+
 
 .statement p {
     color: #f6ffff;
@@ -305,6 +327,10 @@ footer.page-footer .footer-copyright {
   .center.lhd-logo {
     width: 90%;
   }
+
+  .intro h3, .testie-body .intro h3 {
+    font-size: 30px;
+  } 
 }
 
 @media (min-width: 601px) and (max-width: 992px) {
